# SH-PA

./: .gitignore  README.en.md  README.md  pyproject.toml
gongwen_benchmark/: README.md  agency_metadata.csv  dataset_card.md  element_dictionary.csv  element_dictionary.xlsx.README.md
gongwen_benchmark/dataset_1_question_only/: generation_prompts.md  questions_public.jsonl  questions_with_hidden_metadata.jsonl  taxonomy.json
gongwen_benchmark/dataset_2_data_qa/: anomaly_labels.jsonl  answers.jsonl  briefing_tasks.jsonl  evidence_map.jsonl  questions.jsonl  records.csv  records.parquet.README.md
gongwen_benchmark/dataset_3_writing/: taxonomy.json  writing_prompts_public.jsonl  writing_prompts_with_rubric.jsonl
gongwen_benchmark/dataset_4_audit/: audit_tasks_public.jsonl  audit_tasks_with_gold.jsonl  taxonomy.json
gongwen_benchmark/evaluation/: format_rules.yaml  hallucination_rules.yaml  metrics_config.yaml  report_template.md  scorer.py
gongwen_benchmark/generated_samples/: DOC0001_决议_短.md  DOC0002_决定_中.md  DOC0003_命令_长.md  DOC0004_公报_短.md  DOC0005_公告_中.md  DOC0006_通告_长.md  documents.jsonl
gongwen_benchmark/scripts/: benchmark_schema.py  compose_documents.py  data_sources.py  eval_runner.py  generate_audit_tasks.py  generate_benchmarks.py  generate_writing_prompts.py  litellm_minimax.py  llm_providers.py  models_example.yaml  tokens.py  validate_artifacts.py
gongwen_benchmark/workflow/: review_test_cases.jsonl  workflow_event_examples.jsonl  workflow_schedule.jsonl
notebooks/: CN_GongWen_Colab_Pipeline.ipynb  CN_GongWen_Compose_Colab.ipynb  CN_GongWen_Reproduce_Colab.ipynb  Shanghai_HOD_Colab_Pipeline.ipynb
shanghai_hod_benchmark/: README.md  dataset_card.md  hospital_metadata_anonymized.csv  indicator_dictionary.csv  indicator_dictionary.xlsx.README.md
shanghai_hod_benchmark/dataset_1_question_only/: generation_prompts.md  questions_public.jsonl  questions_with_hidden_metadata.jsonl  taxonomy.json
shanghai_hod_benchmark/dataset_2_data_qa/: anomaly_labels.jsonl  answers.jsonl  briefing_tasks.jsonl  evidence_map.jsonl  questions.jsonl  records.csv  (+1 more)
tests/: test_benchmark.py  test_eval_runner.py
(+12 files in other folders)
