[project]
name = "sh-hod-benchmark"
version = "0.1.0"
description = "Shanghai-HOD-Q37 and Shanghai-HOD-DataQA37 benchmark generators"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
llm = ["litellm>=1.0.0"]
parquet = ["pandas>=2.0.0", "pyarrow>=14.0.0"]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
